# just-another-backend

./: .gitignore  CMakeLists.txt  README.md  test.c
include/: Common.h  context.h  error_reporter.h  jab.h  jit_env.h  machine_module.h  module_builder.h  pretty_print.h  register_allocator.h  register_manager.h
include/arch/x86_64/: ADIR.h  encode.h  mdf.h  mdir.h  mdir_gen.h  pretty_print.h
include/link/: coff.h  windows_pe.h
include/passes/: analysis_passes.h  opt_passes.h
include/passes/analysis/: liveness.h
lib/: cprint.h  enum_to_switch.py  microsoft_craziness.h  small_profiler.h
src/: context.cpp  jab.cpp  jit_env.cpp  machine_module.cpp  main.cpp  module_builder.cpp  register_allocator.cpp  register_manager.cpp
src/arch/x86_64/: ADIR.cpp  codegen.cpp  encode.cpp  mdir_gen.cpp
src/link/: coff.cpp  windows_pe.cpp
src/passes/analysis/: liveness.cpp
tests/: run_tests.cpp
